--- a/build.gradle
+++ b/build.gradle
@@ -14,8 +14,8 @@ repositories {
 
 dependencies {
 	implementation 'org.springframework.boot:spring-boot-starter'
-	implementation 'org.springframework.boot:spring-boot-starter-web'
 	implementation 'org.springframework.boot:spring-boot-starter-data-jpa'
+	implementation 'org.springframework.boot:spring-boot-starter-data-rest'
 	implementation "org.springdoc:springdoc-openapi-ui:1.5.2"
 	implementation 'mysql:mysql-connector-java'
 	
