--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -8,9 +8,10 @@ spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQL5Dialect
 spring.jpa.properties.hibernate.enable_lazy_load_no_trans=true
 spring.datasource.url = jdbc:mysql://localhost:3306/reading?useUnicode=yes&characterEncoding=UTF-8&useJDBCCompliantTimezoneShift=true&useLegacyDatetimeCode=false&serverTimezone=UTC
 spring.datasource.username = admin
-spring.datasource.password = RAPtor.1234
+spring.datasource.password = pass
 
 #
 # Swagger configurations
 #
 springdoc.swagger-ui.path=/api-doc.html
+spring.mvc.pathmatch.matching-strategy = ANT_PATH_MATCHER
