--- a/build.gradle
+++ b/build.gradle
@@ -14,10 +14,13 @@ repositories {
 
 dependencies {
 	implementation 'org.springframework.boot:spring-boot-starter'
+	implementation 'org.springframework.boot:spring-boot-starter-web'
 	implementation 'org.springframework.boot:spring-boot-starter-data-jpa'
 	implementation 'org.springframework.boot:spring-boot-starter-data-rest'
-	implementation "org.springdoc:springdoc-openapi-ui:1.5.2"
+	implementation 'org.springframework.boot:spring-boot-starter-security'
 	implementation 'mysql:mysql-connector-java'
+	implementation "org.springdoc:springdoc-openapi-ui:1.5.2"
+	implementation "io.jsonwebtoken:jjwt:0.9.1"
 	
 	testImplementation 'org.springframework.boot:spring-boot-starter-test'
 }
