--- a/build.gradle
+++ b/build.gradle
@@ -19,7 +19,8 @@ dependencies {
 	implementation 'org.springframework.boot:spring-boot-starter-data-rest'
 	implementation 'org.springframework.boot:spring-boot-starter-security'
 	implementation 'mysql:mysql-connector-java'
-	implementation "org.springdoc:springdoc-openapi-ui:1.5.2"
+	implementation "org.springdoc:springdoc-openapi-ui:1.6.6"
+	implementation "org.springdoc:springdoc-openapi-security:1.6.6"
 	implementation "io.jsonwebtoken:jjwt:0.9.1"
 	
 	testImplementation 'org.springframework.boot:spring-boot-starter-test'
