--- a/build.gradle
+++ b/build.gradle
@@ -22,6 +22,7 @@ dependencies {
 	implementation "org.springdoc:springdoc-openapi-ui:1.6.6"
 	implementation "org.springdoc:springdoc-openapi-security:1.6.6"
 	implementation "io.jsonwebtoken:jjwt:0.9.1"
+	implementation "org.hibernate.validator:hibernate-validator"
 	
 	testImplementation 'org.springframework.boot:spring-boot-starter-test'
 	testImplementation 'com.h2database:h2'
